--- a/PokemonBattleSimulator/Views/MainWindow.xaml
+++ b/PokemonBattleSimulator/Views/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PokemonBattleSimulator"
         mc:Ignorable="d"
-        Title="Pokemon Battle Simulator" Height="450" Width="800">
+        Title="Pokemon Battle Simulator" Icon="pack://application:,,,/Resources/UI/Images/AppIcon.ico" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
@@ -14,9 +15,12 @@
                        FontWeight="Bold" 
                        HorizontalAlignment="Center"/>
 
-            <Button Content="Start Battle" Width="200" Height="40" Command="{Binding OpenBattleWindowCommand}"/>
-            <Button Content="Trainer Setup" Width="200" Height="40" Command="{Binding OpenTrainerSetupWindowCommand}"/>
-            <Button Content="About" Width="200" Height="40" Command="{Binding OpenAboutWindowCommand}"/>
+            <Button Content="Start Battle" Width="200" Height="40" Command="{Binding OpenBattleWindowCommand}"
+                    Cursor="Hand" ToolTip="Start Battle"/>
+            <Button Content="Trainer Setup" Width="200" Height="40" Command="{Binding OpenTrainerSetupWindowCommand}"
+                    Cursor="Hand" ToolTip="Trainer Setup"/>
+            <Button Content="About" Width="200" Height="40" Command="{Binding OpenAboutWindowCommand}"
+                    Cursor="Hand" ToolTip="About"/>
 
         </StackPanel>
     </Grid>
