Add Sound Control

--- a/PokemonBattleSimulator/Views/MainWindow.xaml
+++ b/PokemonBattleSimulator/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PokemonBattleSimulator"
         mc:Ignorable="d"
         Title="Pokemon Battle Simulator" Icon="pack://application:,,,/Resources/UI/Graphics/AppIcon.ico" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen">
+        WindowState="Maximized" WindowStartupLocation="CenterScreen">
     <Grid>
         <MediaElement x:Name="BackgroundMusic"
                       Source="Resources/UI/Audio/MainTheme.mp3"
@@ -20,7 +20,8 @@
 
             <TextBlock Text="Pokémon Battle Simulator" 
                        FontSize="28" 
-                       FontWeight="Bold" 
+                       FontWeight="Bold"
+                       Margin="0 0 0 20"
                        HorizontalAlignment="Center"/>
 
             <Button Content="Start Battle" Width="200" Height="40" Command="{Binding OpenBattleWindowCommand}"
@@ -30,6 +31,14 @@
             <Button Content="About" Width="200" Height="40" Command="{Binding OpenAboutWindowCommand}"
                     Cursor="Hand" ToolTip="About"/>
 
+            <TextBlock Text="Volume:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <Slider Width="150"
+            Minimum="0"
+            Maximum="1"
+            SmallChange="0.01"
+            LargeChange="0.1"
+            Value="{Binding Volume, Mode=TwoWay}"/>
+            <Button Content="{Binding MuteButtonText}" Command="{Binding ToggleMuteCommand}" Margin="10,0,0,0"/>
         </StackPanel>
     </Grid>
 </Window>
