--- a/PokemonBattleSimulator/App.xaml
+++ b/PokemonBattleSimulator/App.xaml
@@ -2,8 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PokemonBattleSimulator"
-             StartupUri="Views/MainWindow.xaml">
+             xmlns:views="clr-namespace:PokemonBattleSimulator.Views"
+             xmlns:vms="clr-namespace:PokemonBattleSimulator.ViewModels">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type vms:HomeViewModel}">
+            <views:HomeView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:PokedexViewModel}">
+            <views:PokedexView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vms:ItemdexViewModel}">
+            <views:ItemdexView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
